--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
         description: 'Environment to run deployment against'
         type: environment
         required: true
-        default: dev, preprod, prod
+        default: dev
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
