--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
 name: CI
-
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -11,7 +9,7 @@ on:
         description: 'Environment to run deployment against'
         type: choice
         required: true
-        options: [dev, preprod, prod]
+        options: [DEV, PRE, PROD]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,19 +17,14 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    # Environment
+    environment: ${{ github.event.inputs.environment }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          echo "Environment is : $ENVIRONMENT"
-        env:
-          ENVIRONMENT: ${{ github.event.inputs.environment }}
-
+          echo "Environment is : ${{ secrets.AWS_ROLE }}"
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
