--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          echo "Environment is : ${{ secrets.AWS_ROLE }}"
+          echo "Creating file with secret : touch ${{ secrets.AWS_ROLE }}"
+          ls *
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
