--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,5 @@ jobs:
       - name: Run a one-line script
         run: |
           echo "Creating file with secret : touch ${{ secrets.AWS_ROLE }}"
-          ls
+      - name: Running ls command
+        run: ls
