--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,22 @@ jobs:
     environment: ${{ github.event.inputs.environment }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
+      # Configuring AWS Credentials
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE }}
+          region: eu-west-1
+          
+      # Configuring aws cli
+      - name: Configure AWS CLI
         env:
-          FILE_NAME: ${{ secrets.AWS_ROLE }}
+          AWS_PROFILE_NAME: AWS-CDF-${{ github.event.inputs.environment }}
         run: |
-          echo "Creating file with secret .."
-          touch $FILE_NAME
-      - name: Running ls command
-        run: ls
+          aws configure set_aws_access_key_id $AWS_ACCESS_KEY_ID --profile $AWS_PROFILE_NAME
+          aws configure set_aws_access_key_id $AWS_SECRET_ACCESS_KEY --profile $AWS_PROFILE_NAME
+          aws configure set_aws_access_key_id $AWS_SESSION_TOKEN --profile devops $AWS_PROFILE_NAME
+      #          
+      - name: Listing Code Build Projects
+        run: |
+          aws codebuild list-projects --profile $AWS_PROFILE_NAME
