--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ secrets.AWS_ROLE }}
-          region: eu-west-1
+          aws-region: eu-west-1
           
       # Configuring aws cli
       - name: Configure AWS CLI
