--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Environment
-    environment: ${{ github.event.inputs.environment }}
+    environment: "arn:aws:iam::947060712114:role/cdf-child-dev"
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Configuring AWS Credentials
