--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,10 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: "arn:aws:iam::947060712114:role/cdf-child-dev"
+          role-to-assume: arn:aws:iam::947060712114:role/cdf-child-dev
           aws-region: eu-west-1
+          role-session-name: GithubActions
+      - run: aws sts get-caller-identity
           
       # Configuring aws cli
       - name: Configure AWS CLI
