--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile $AWS_PROFILE_NAME
           aws configure set aws_access_key_id $AWS_SECRET_ACCESS_KEY --profile $AWS_PROFILE_NAME
-          aws configure set aws_access_key_id $AWS_SESSION_TOKEN --profile devops $AWS_PROFILE_NAME
+          aws configure set aws_access_key_id $AWS_SESSION_TOKEN --profile $AWS_PROFILE_NAME
           
       - name: Listing Code Build Projects
         run: |
