--- a/.github/workflows/checkBranch.yaml
+++ b/.github/workflows/checkBranch.yaml
@@ -18,9 +18,9 @@ jobs:
       - name: Branch Name
         run: echo $GITHUB_REF_NAME
       - name: Checks Branch master
-        if: contains(env.GITHUB_REF_NAME, 'master')
+        if: ${{ contains('$GITHUB_REF_NAME', 'master') }}
         run: echo Branch is master
       
       - name: Checks Branch dev
-        if: contains(env.GITHUB_REF_NAME, 'dev')
+        if: ${{ contains('$GITHUB_REF_NAME', 'dev') }}
         run: echo Branch is dev
