--- a/.github/workflows/checkBranch.yaml
+++ b/.github/workflows/checkBranch.yaml
@@ -17,10 +17,11 @@ jobs:
     steps:
       - name: Branch Name
         run: echo $GITHUB_REF_NAME
+        
       - name: Checks Branch master
-        if: ${{ contains('$GITHUB_REF_NAME', 'master') }}
+        if: ${{ $GITHUB_REF_NAME == 'master' }}
         run: echo Branch is master
       
       - name: Checks Branch dev
-        if: ${{ contains('$GITHUB_REF_NAME', 'dev') }}
+        if: ${{ $GITHUB_REF_NAME == 'dev' }}
         run: echo Branch is dev
