--- a/.github/workflows/checkBranch.yaml
+++ b/.github/workflows/checkBranch.yaml
@@ -19,9 +19,9 @@ jobs:
         run: echo $GITHUB_REF_NAME
         
       - name: Checks Branch master
-        if: github.refname == 'master'
+        if: github.ref_name == 'master'
         run: echo Branch is master
       
       - name: Checks Branch dev
-        if: github.ref == 'dev'
+        if: github.ref_name == 'dev'
         run: echo Branch is dev
